--- a/manifiestaFront/src/index.html
+++ b/manifiestaFront/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ManiFiesta</title>
 </head>
-<body>
+<body style="background-color: rgb(24, 24, 24);">
     <div id="root"></div>
 </body>
 </html>
